--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -46,7 +46,7 @@
 .relatorio{
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: #e4dcdc;
+    background-color: #f3f3f3;
 }
 .imagem-introducao{
     width: 500px;
