--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css");
-@import url(/includes/css/style.css);
-@import url(/includes/css/global.css);
+@import url(includes/css/style.css);
+@import url(includes/css/global.css);
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-@import url(/includes/css/mobile.css);
+@import url(includes/css/mobile.css);
