--- a/includes/css/mobile.css
+++ b/includes/css/mobile.css
@@ -52,7 +52,11 @@
     }
     
   
- 
+    .maior{
+        width: 490px;
+        margin-top: 120px;
+        margin-bottom: 50px;
+    }
     
   
   .photo-gallery .intro {
