--- a/includes/css/mobile.css
+++ b/includes/css/mobile.css
@@ -53,7 +53,7 @@
     
   
     .maior{
-        width: 80%;
+        width: 260px;
         margin-top: 120px;
         margin-bottom: 50px;
     }
